# boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst
lib/: cookiecutter.json
lib/{{cookiecutter.__project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readthedocs.yaml  setup.cfg
lib/{{cookiecutter.__project_slug}}/.github/workflows/: release.yaml  tests.yaml
lib/{{cookiecutter.__project_slug}}/docs/: requirements.txt
lib/{{cookiecutter.__project_slug}}/docs/source/: conf.py  customization.rst  guide.rst  index.rst  reference.rst
lib/{{cookiecutter.__project_slug}}/src/{{cookiecutter.__project_slug}}/: __init__.py
package/: cookiecutter.json
package/hooks/: post_gen_project.py  pre_gen_project.py
package/{{cookiecutter.project_slug}}/: .bumpversion.cfg  .dockerignore  .editorconfig  .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config-ci.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  Dockerfile  LICENSE  README.rst  docker-compose.yaml  entrypoint.sh  pyproject.toml  setup.cfg  tox.ini
package/{{cookiecutter.project_slug}}/.github/: pull_request_template.md
package/{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: feature_request.md
package/{{cookiecutter.project_slug}}/.github/workflows/: coverage.yml  hooks.yml  publish.yml
package/{{cookiecutter.project_slug}}/.gitlab/issue_templates/: bug_report.md
package/{{cookiecutter.project_slug}}/data/fixtures/: .gitignore
package/{{cookiecutter.project_slug}}/docs/source/: .gitignore  api.rst  conf.py  developer_guide.rst  index.rst  readme.rst
package/{{cookiecutter.project_slug}}/etc/docker/: requirements-apk  requirements-apk-build
package/{{cookiecutter.project_slug}}/etc/idea/runConfigurations/: docker.xml  pytest.xml  run.xml  tox.xml
package/{{cookiecutter.project_slug}}/requirements/: .gitignore  base.txt
package/{{cookiecutter.project_slug}}/settings/: .gitignore
package/{{cookiecutter.project_slug}}/tests/: __init__.py  fixtures.py  test_example.py
package/{{cookiecutter.project_slug}}/tools/: _lib.sh  build_image.sh  docs.sh  format_commit_msg.py  init.sh  new.sh  release.sh
package/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  doctest_example.py
package/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/resources/: __init__.py
