[metadata]
name = {{ cookiecutter.__package_name }}
version = attr: {{ cookiecutter.__project_slug }}.__version__
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{ cookiecutter.__url }}
author = {{ cookiecutter.email }}
license = {{ cookiecutter.license }}
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    {% set versions = cookiecutter.__versions.split('_') %}
    {%- for v in versions -%}
    Programming Language :: Python :: 3.{{ v }}
    {% endfor -%}
    Programming Language :: Python :: Implementation :: CPython
keywords =

[options]
package_dir=
    =src
packages = find:
python_requires = >={{ cookiecutter.min_version }}
install_requires =

[options.entry_points]
console_scripts =

[options.packages.find]
where=src

[options.extras_require]
test=
    pytest == 8.1.1
dev =
    pip-tools
    tox
    coverage
    mypy
    isort
    black
docs=
    sphinx
    python_docs_theme
    m2r2

[build-system]
requires =
    setuptools
    wheel
build-backend = "setuptools.build_meta"

[flake8]
max-line-length = 125
max-doc-length = 135
select = E
