[metadata]
name = {{ cookiecutter.project_slug }}
version = attr: {{ cookiecutter.project_slug }}.__version__
description = {{ cookiecutter.project_short_description }}
long_description = file: README.rst
long_description_content_type = text/x-rst
url = {{ cookiecutter.vcs_url }}
author = {{ cookiecutter.author }}
author_email = {{ cookiecutter.email }}
license = {{ cookiecutter.license }}
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    {% if cookiecutter.license == 'MIT license' -%}
    License :: OSI Approved :: MIT License
    {% elif cookiecutter.license == 'BSD license' -%}
    License :: OSI Approved :: BSD License
    {% elif cookiecutter.license == 'ISC license' -%}
    License :: OSI Approved :: ISC License (ISCL)
    {% elif cookiecutter.license == 'Apache Software License 2.0' -%}
    License :: OSI Approved :: Apache Software License
    {% elif cookiecutter.license == 'GNU General Public License v3' -%}
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    {% elif cookiecutter.license == 'Not open source' -%}
    License :: Other/Proprietary License
    {% endif -%}
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    {% set versions = cookiecutter.python_versions.split('_') %}
    {%- for v in versions -%}
    Programming Language :: Python :: 3.{{ v }}
    {% endfor -%}
    Programming Language :: Python :: Implementation :: CPython
keywords =

[options]
packages = find:
python_requires = >={{ cookiecutter.minimum_python_version }}
install_requires =

[options.packages.find]
exclude = tests*
include = {{ cookiecutter.project_slug }}

[options.entry_points]
console_scripts =

[options.extras_require]
dev =
    bump2version==1.0.*
    shellcheck-py==0.8.*
    pyroma==3.2
    bandit==1.7.*
    black==21.10b0
    codecov==2.1.*
    coverage==6.0.*
    flake8==4.0.*
    pyproject-flake8
    isort==5.10.*
    pip-tools==6.4.*
    pre-commit==2.15
    pydocstyle==6.1.*
    pytest==6.2
    pyupgrade==2.29.*
    setup-cfg-fmt==1.19.*
    tox==3.24
    tox-pyenv==1.1.*
    restructuredtext-lint==1.3.*

[build-system]
requires =
    setuptools
    wheel
build-backend = "setuptools.build_meta"
